external-crates/move/crates/move-compiler/tests/development/signed_ints/invalid/signed_int_literal_too_large_i16.move
module a::m {
    fun bad() {
        32768i16;
        let _x: i16 = 40000i16;
        -32769i16;
    }
}
